Thu Jan 17 09:13:04 GMT 2008  Ming Hua  <minghua-guest@users.alioth.debian.org>

	* po/zh_CN.po: Update from Translation Project.

Tue Jan 15 18:45:22 GMT 2008  Yuri Kozlov  <kozlov.y@gmail.com>

	* po/ru.po: Update from Translation Project.
	* man/THANKS: Update e-mail address.

Tue Jan 15 14:37:15 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* m4/man-bdb.m4: Add WITH-DB option; make ACTION-IF-FOUND optional;
	  define BDB_H and BTREE.
	* configure.ac: Make Berkeley DB checks more concise using the
	  above.

Tue Jan 15 12:31:12 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Remove unused AC_HEADER_STDC.

Tue Jan 15 08:42:27 GMT 2008  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: Update from Translation Project.

Tue Jan 15 08:39:56 GMT 2008  Benno Schulenberg  <benno@vertaalt.nl>

	* po/nl.po: Update from Translation Project.

Tue Jan 15 00:01:39 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* m4/man-compress-lib.m4: New function, MAN_COMPRESS_LIB: like
	  AC_CHECK_LIB but adds the library to LIBCOMPRESS rather than LIBS.
	* configure.ac: Use it for -lz.
	* src/Makefile.am (lexgrog_LDADD, man_LDADD, manconv_LDADD,
	  mandb_LDADD, zsoelim_LDADD): Add $(LIBCOMPRESS).

Mon Jan 14 15:29:55 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Don't check for strerror; Gnulib supplies a
	  replacement now.

Mon Jan 14 13:59:18 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/mandb.c (xcopy): Set the new file's mode to DBMODE in order to
	  try to defend against strange problems with databases being left
	  world-unreadable (Debian bug #430800).

Mon Jan 14 00:55:22 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/man-db.pot: Update.

Mon Jan 14 00:16:57 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.1-pre2.
	* po/man-db.pot, po/*.po: Update.

Mon Jan 14 00:00:21 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog_test.c (parse_opt): Use argp_error rather than