@@ -373,7 +373,6 @@ extern char *program_name;	/* the basename of the program (as called) */
 #define FAIL		1	/* usage or syntax error */
 #define FATAL		2	/* operational error */
 #define CHILD_FAIL	3	/* child failed */
-#define INTERRUPTED	4	/* Interrupted by signal */
 #define NOT_FOUND	16	/* No action was taken */
 
 /* System or user catpaths? Allow bitwise disjunctions of these. */
