@@ -1,3 +1,10 @@
+Thu Jan 24 17:12:24 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* include/manconfig.h.in (INTERRUPTED): Remove.
+	* src/man.c (int_handler): Remove; this is useless and
+	  non-signal-safe.
+	  (main): Don't set SIGINT to int_handler.
+
 Thu Jan 17 09:13:04 GMT 2008  Ming Hua  <minghua-guest@users.alioth.debian.org>
 
 	* po/zh_CN.po: Update from Translation Project.
